--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,11 +56,14 @@ img{
 }
 
 .card-custom, .card-custom-image img{
-    transition: all 0.4s ease;
+    transition: all 0.8s ease;
 }
 
 .card-custom:hover, .card-custom-image img{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
+.card-custom{
+    border: 2px black solid;
+}
 
