--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ img{
 }
 
 .card-custom:hover, .card-custom-image img{
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 .card-custom{
@@ -70,7 +70,7 @@ img{
 }
 
 #output{
-    border: 2px black solid;
+
 }
 
 #output p, .card-custom p{
@@ -96,4 +96,9 @@ img{
   .css-button-fully-rounded--grey:hover {
     background: var(--color-base);
     color: var(--color-brand);
+  }
+
+  #output{
+    min-height: 176px;
+
   }
