--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,15 +58,16 @@ img{
 }
 
 .card-custom, .card-custom-image img{
-    transition: all 0.8s ease;
+    transition: all 0.3s ease;
 }
 
 .card-custom:hover, .card-custom-image img{
-    transform: scale(1.05);
+    transform: scale(1.02);
+    border: 1px var(--color-brand) solid
 }
 
 .card-custom{
-    border: 2px black solid;
+    border: 1px var(--color-base) solid;
 }
 
 #output{
@@ -96,6 +97,7 @@ img{
   .css-button-fully-rounded--grey:hover {
     background: var(--color-base);
     color: var(--color-brand);
+    border: 1px var(--color-brand) solid;
   }
 
   #output{
