--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,8 +73,8 @@ img{
     border: 1px var(--color-base) solid;
 }
 
-#player-score{
-    margin-left: 200px;
+#first{
+    color: var(--color-brand)
 }
 
 #output p, .card-custom p{
