--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,9 @@ img{
 
 
 /* CARD */
+.cards{
+    margin-top: px;
+}
 
 .card-custom, .card-custom-image{
     overflow: hidden;
@@ -106,4 +109,32 @@ img{
   #output{
     min-height: 176px;
 
+  }
+
+  @media(max-width: 768px){
+    .icon-container{
+        display: flex;
+        height: 50%;
+        flex-shrink: 1;
+    }
+    .card-custom{
+        height: 30vh;
+    }
+    .card-custom-image{
+        width: 200px;
+    }
+  }
+
+  @media(max-width: 425px){
+    .icon-container{
+        display: flex;
+        flex-direction: column;
+        height: 50%;
+    }
+    .card-custom{
+        height: 15vh;
+    }
+    .card-custom-image{
+        display: none;
+    }
   }
